unpackaged/main/default/objects/Medical_Camp__c/Medical_Camp__c.object-meta.xml
<CustomObject>
    <label>Community Health Event</label>
    <nameField>
        <label>Community Health Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Health Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>