unpackaged/main/default/objects/Medical_Camp__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Gives you Street/City/State/PostalCode/Country in one field.</description>
    <inlineHelpText>Please add address</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>