unpackaged/main/default/objects/Medical_Camp__c/fields/Booked_Appointments__c.field-meta.xml
<CustomField>
    <fullName>Booked_Appointments__c</fullName>
    <label>Booked Appointments</label>
    <summaryForeignKey>Appointment__c.Medical_Camp__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>