unpackaged/main/default/objects/Medical_Camp__c/fields/Camp_Date__c.field-meta.xml
<CustomField>
    <fullName>Camp_Date__c</fullName>
    <description>The official date of the medical camp event.</description>
    <inlineHelpText>Please enter the date the medical camp is scheduled to take place.</inlineHelpText>
    <label>Camp Date</label>
    <type>Date</type>
</CustomField>