unpackaged/main/default/objects/Medical_Camp__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>TRIM(
  IF(NOT(ISBLANK(Address__Street__s)), Address__Street__s &amp; &quot;, &quot;, &quot;&quot;) &amp;
  IF(NOT(ISBLANK(Address__City__s)), Address__City__s &amp; &quot;, &quot;, &quot;&quot;) &amp;
  BLANKVALUE(Address__PostalCode__s, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>