unpackaged/main/default/objects/Medical_Camp__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Geolocation field to store the precise address and coordinates of the camp.</description>
    <inlineHelpText>Start typing the address and select from the suggestions to pinpoint the exact location.</inlineHelpText>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>