unpackaged/main/default/objects/Medical_Camp__c/fields/Slots_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Slots_Remaining__c</fullName>
    <formula>Capacity__c -  Booked_Appointments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slots Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>