unpackaged/main/default/objects/Medical_Camp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Booked_Appointments__c</columns>
    <columns>Capacity__c</columns>
    <columns>Slots_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>